output.txt
1_4.cpp: In function ‘int main()’:
1_4.cpp:5:7: error: ‘hello’ was not declared in this scope
 cout<<hello
       ^